--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
-Elvis Vulgence Njenga <e.kinyua@alustudent.com>
-Jeff Dauda <j.dauda@alustudent.com>
+
+Davis GATABAZI <d.gatabazi@alustudent.com>
